feat: P4ADEV-1921-WF-Classification-IUF-Send-event-to-WF-Transfer-Classification (#28)
Co-authored-by: antonio.torre <antonio.torre@pagopa.it>